k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: simple-login-service
  namespace: default
spec:
  type: NodePort
  selector:
    app: simple-login-app
  ports:
    - port: 80
      targetPort: 5000
      protocol: TCP
