k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: simple-login-app
  namespace: default
spec:
  replicas: 2
  selector:
    matchLabels:
      app: simple-login-app
  template:
    metadata:
      labels:
        app: simple-login-app
    spec:
      serviceAccountName: app-dynamo-sa
      containers:
      - name: web
        image: 957950410212.dkr.ecr.us-east-1.amazonaws.com/simple-login-app:IMAGE_TAG
        ports:
        - containerPort: 5000
---
apiVersion: v1
kind: Service
metadata:
  name: simple-login-service
spec:
  type: NodePort
  selector:
    app: simple-login-app
  ports:
    - port: 80
      targetPort: 5000
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: simple-login-ingress
  annotations:
    alb.ingress.kubernetes.io/scheme: "internet-facing"
    alb.ingress.kubernetes.io/target-type: "ip"
spec:
  ingressClassName: alb
  rules:
    - http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: simple-login-service
                port:
                  number: 80
